--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ img{
 
 .body-container .img-container{
     height: 400px;
-    background: url('./images/image.png') center top /cover no-repeat;
+    background: url('./images/image.jpg') center top /cover no-repeat;
     box-shadow: 0px 10px 10px rgba(0,0,0,0.2);
     border: 1px solid #333;
     min-width: 300px;
